# Todoist-App

./: .dockerignore  .env.example  Dockerfile  README.md  entrypoint.sh  manage.py  migrate_special.py  pyproject.toml  pytest.ini
.github/workflows/: action.yml
TodoList_App/: settings.py  urls.py  wsgi.py
bot/: admin.py  models.py  serializers.py  urls.py  views.py
bot/management/commands/: runbot.py
bot/migrations/: 0001_initial.py  0002_rename_varification_code_tguser_verification_code.py
bot/tg/: client.py  dc.py
core/: admin.py  managers.py  models.py  serializers.py  urls.py  views.py
core/migrations/: 0001_initial.py
deploy/: .env_ci  docker-compose-ci.yml
goals/: admin.py  filters.py  models.py  permissions.py  serializers.py  urls.py  views.py
goals/migrations/: 0001_initial.py  0002_rename_title_goalcomment_text.py  0003_rename_data_created_goal_created_and_more.py
tests/: conftest.py  factories.py  fixtures.py  simple_test.py
tests/core/: user_test.py
tests/goals/: board_test.py  comment_test.py  goal_category_test.py  goal_create_test.py  goal_test.py
