[tool.poetry]
name = "todokist-app"
version = "0.1.0"
description = ""
authors = ["Павел <king-he@mail.ru>"]
readme = "README.md"
packages = [{include = "todokist_app"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.5"
asgiref="3.6.0"
django-environ="0.9.0"
django-phonenumber-field="7.0.2"
phonenumberslite="8.13.4"
Pillow="9.4.0"
psycopg2="2.9.5"
sqlparse="0.4.3"
tzdata="2022.7"
gunicorn = "^20.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
